@@ -1,4 +1,4 @@
 [Keybindings]
-Wnd_Close=W-d
+Wnd_Close=W-Escape
 [Applications]
 Cmd="C:\Program Files\ConEmu\ConEmu64.exe"
