@@ -112,7 +112,7 @@ LRESULT CALLBACK WndProc(HWND hWnd, UINT message, WPARAM wParam, LPARAM lParam)
 			break;
 		}
 		default:
-			if(message == g_Context.GetShellMsgID() && g_Context.IsInitialized())
+			if(message == g_Context.GetShellMsgID() && g_Context.IsReady())
 			{
 				switch(wParam)
 				{
