@@ -108,6 +108,8 @@
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="..\CHANGES" />
+    <None Include="..\README.md" />
     <None Include="common\w3_VectorGrid.inl" />
   </ItemGroup>
   <ItemGroup>
